Finally back from break, many new features
Signed-off-by: Bryan Ong <bryanong0906@gmail.com>